[package]
name = "xfrmnetlink"
version = "0.2.0"
authors = ["Scott Zuk <zooknotic@proton.me>"]
edition = "2018"
homepage = "https://github.com/rust-netlink/xfrmnetlink"
repository = "https://github.com/rust-netlink/xfrmnetlink"
keywords = ["netlink", "linux", "ipsec", "xfrm"]
license = "MIT"
readme = "README.md"
description = "Manipulate Linux IPsec tunnels via netlink"

[features]
test_as_root = []
default = ["tokio_socket"]
tokio_socket = ["netlink-proto/tokio_socket", "tokio"]
smol_socket = ["netlink-proto/smol_socket", "async-global-executor"]

[dependencies]
futures = "0.3.11"
thiserror = "1"
netlink-packet-core = { version = "0.5.0" }
netlink-packet-xfrm = { version = "0.3.0" }
netlink-proto = { default-features = false, version = "0.11.1" }
tokio = { version = "1.0.1", features = ["rt"], optional = true }
async-global-executor = { version = "2.0.2", optional = true }

[dev-dependencies]
hex = "0.4.3"
tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread"] }
async-std = { version = "1.9.0", features = ["attributes"] }
ipnet = { version = "2" }
